test_regress/t/t_force_func.out
%Error: t/t_force_func.v:29:  got='h0 exp='h00000001
%Error: t/t_force_func.v:37:  got='h0 exp='h00000002
%Error: t/t_force_func.v:42:  got='h0 exp='h00000003
%Error: t/t_force_func.v:46:  got='h0 exp='h00000003
